--- a/Assets/css/common.css
+++ b/Assets/css/common.css
@@ -206,15 +206,15 @@ input, button:focus {
   position: fixed;
   width: 80%;
   height: 100%;
-  background: url(../images/menubg.svg) center center no-repeat fixed;
-  background-size: cover;
-  background-size: cover;
-  background-color: #531eaa;
+ // background: url(../images/menubg.svg) center center no-repeat fixed;
+ // background-size: cover;
+ // background-size: cover;
+  background-color: #e8e7e7;//#531eaa;
   z-index: 11;
   top: 0;
   right: -80%;
   transition:all .2s ease;
-  color: #fff;
+  color: black;
   text-align: center;
 }
 
@@ -222,8 +222,10 @@ input, button:focus {
   right: 0;
 }
 .menu .menu-title{
+  color:#fff;
   font-size: 1.5em;
-  padding: 9px;
+  padding: 76px;
+  background:black;
 }
 
 .menu .close-menu{
@@ -411,11 +413,11 @@ input, button:focus {
   padding:15px;
 }
 .container-deactive{
-  left:-29%;
+  left:-23%;
 }
 .menu{
-  width: 30%;
-  right: -30%;
+  width: 24%;
+  right: -24%;
 }
 .menu-active{
  right:0;
@@ -499,8 +501,13 @@ input, button:focus {
 }
 }
 @media (max-device-width:736px) and (orientation:landscape) {
+.menu .menu-title{
+  padding:37px;
+  
+}
 .menu .close-menu{
   top:-20px;
+  
 }
 .menu .close-menu i.icon {
   font-size: 2em;
@@ -523,7 +530,16 @@ input, button:focus {
 }
 
 @media (min-device-width:1024px) and (orientation:landscape) {
-
+.container-deactive{
+  left:-29%;
+}
+.menu{
+  width: 30%;
+  right: -30%;
+}
+.menu-active{
+ right:0;
+}
 .menu .menu-body{
     padding: 0;
     font-size: 2em;
@@ -533,22 +549,10 @@ input, button:focus {
   margin:0;
 }	
 .menu .menu-body ul li{
-   padding:0;
+   padding:5px;
 }	
 }
-@media (min-device-width:1024px) and (orientation:landscape) {
-.menu .menu-body{
-    padding: 0;
-    //font-size: 2.5em;
-    height: 70%;
-}
-.menu .menu-body ul{
-  margin:0;
-}	
-.menu .menu-body ul li{
-   padding:10px;
-}	
-}
+
 
 /* ----------- iPad mini ----------- */
 
