--- a/Assets/css/common.css
+++ b/Assets/css/common.css
@@ -1,5 +1,7 @@
 @font-face {
   font-family: myFont;
+   font-style: normal;
+    font-weight: normal;
   src: url(../fonts/x.ttf);
 }
 @font-face {
@@ -105,7 +107,7 @@ menu{
 }
 
 .sub-container{
-  height:100%;
+  //height:100%;
   width:100%;
   padding:0;
   margin:0;
@@ -348,6 +350,9 @@ input, button, textarea:focus {
 .container-deactive{
   left:-40%;
 }
+.sub-container{
+  height:100%;
+ }
 .menu{
   width: 40%;
   right: -40%;
@@ -420,6 +425,9 @@ input, button, textarea:focus {
 .container-deactive{
   left:-23%;
 }
+.sub-container{
+  height:100%;
+ }
 .menu{
   width: 24%;
   right: -24%;
@@ -470,6 +478,7 @@ input, button, textarea:focus {
 .sub-container{
   width:1200px;
   margin:auto;
+  height:100%;
 }
 .container-deactive{
   left:-30%;
