--- a/Assets/css/form.css
+++ b/Assets/css/form.css
@@ -93,11 +93,11 @@
   
 }
 .view-container{
-   position: fixed;
-  overflow-x:hidden;
-  //width: 90%;
-  //margin:0 auto;
-  height: 100%;
+  // position: fixed;
+  //overflow-x:hidden;
+  width: 100%;
+  margin:0 auto;
+  //height: 100%;
   z-index: 11;
   top: 0;
   transition:all .5s ease;
@@ -1022,16 +1022,13 @@
 }
 
 /* ----------- Non-Retina Screens ----------- */
-@media only screen and (min-width:1400px){
-  .form-container, .view-container{
-  width:1200px;
-  margin:auto;
-}
-}
+
 @media screen 
   and (min-device-width: 1200px) 
  { 
-
+    .view-container{
+      width: 80%;
+    }
 
    .back-btn .btn-text{
      display:inline;
@@ -1102,7 +1099,9 @@
   @media screen 
   and (min-width: 603px) and (max-width:993px)
   and (-webkit-min-device-pixel-ratio: 1) { 
-
+     .view-container{
+      width: 80%;
+    }
    .form-container .part2 label input[type=text]{
      font-size:1em;
    }
@@ -1144,5 +1143,12 @@
   @media screen 
   and (min-width: 993px) and (max-width:1200px)
 { 
-
+ 
+}
+}
+@media only screen and (min-width:1400px){
+  .form-container, .view-container{
+  width:1200px;
+  margin:auto;
+}
 }
