--- a/Assets/css/common.css
+++ b/Assets/css/common.css
@@ -107,7 +107,7 @@ menu{
 }
 
 .sub-container{
-  //height:100%;
+  height:auto;
   width:100%;
   padding:0;
   margin:0;
@@ -351,7 +351,7 @@ input, button, textarea:focus {
   left:-40%;
 }
 .sub-container{
-  height:100%;
+  //height:100%;
  }
 .menu{
   width: 40%;
